# anew

./: .gitignore  Cargo.toml  README.md  devbox.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
data/: test-basic
src/: app.rs  main.rs
