[package]
name = "anew"
description = "Rust re-implementation"
license = "MIT"
authors = ["wese"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
indexmap = "2.0.2"
natord = "1.0.9"
