[package]
name = "anew"
description = "Rust re-implementation"
license = "MIT"
authors = ["wese"]
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
indexmap = "2.0.2"
natord = "1.0.9"
testfile = "0.1.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
